--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -27,13 +27,13 @@
                     android:id="@+id/search_input"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
-                    android:hint="HÔM NAY BAN MUỐN HỌC GÌ?"
+                    android:hint="HÔM NAY BẠN MUỐN HỌC GÌ?"
                     android:textColorHint="@color/green_700"
-                    android:textAlignment="center"
                     android:textStyle="bold"
                     android:background="@drawable/search_bar_background"
                     android:paddingHorizontal="48dp"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:gravity="start|center_vertical"/>
 
                 <ImageView
                     android:layout_width="20dp"
