--- a/app/src/main/res/layout/fragment_physics_subject.xml
+++ b/app/src/main/res/layout/fragment_physics_subject.xml
@@ -20,7 +20,7 @@
             android:layout_marginBottom="30dp">
 
             <ImageView
-                android:id="@+id/btn_back_physics_subject"
+                android:id="@+id/btn_back"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_back"
