--- a/app/src/main/res/layout/fragment_video_lecture.xml
+++ b/app/src/main/res/layout/fragment_video_lecture.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="30dp">
 
             <ImageView
-                android:id="@+id/btn_back_video_lecture"
+                android:id="@+id/btn_back"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_back"
@@ -139,7 +139,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bài 4: Động năng, thế năng và..."
+                    android:text="Bài 4: Động năng, thế năng và cơ năng"
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
