--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,6 @@
     <color name="gray_400">#9ca3af</color>
     <color name="gray_200">#e5e7eb</color>
     <color name="gray_100">#f3f4f6</color>
+
+    <color name="red">#ff0000</color>
 </resources>
