--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,10 @@
 
     <!-- Header -->
     <include layout="@layout/layout_header" />
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#CBFFE7" />
 
     <FrameLayout
         android:id="@+id/main_fragment_container"
