--- a/app/src/main/res/layout/fragment_mind_map.xml
+++ b/app/src/main/res/layout/fragment_mind_map.xml
@@ -31,8 +31,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="BÀI GIẢNG VIDEO"
-
+                android:text="MINDMAP HỆ THỐNG KIẾN THỨC"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="@color/green_700" />
@@ -47,7 +46,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="BÀI 1: DAO ĐỘNG ĐIỀU HÒA"
+            android:text="Hệ thống lý thuyết C1"
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/black"
@@ -67,10 +66,11 @@
                 android:layout_height="wrap_content"
                 android:padding="0dp">
 
-                <androidx.media3.ui.PlayerView
+                <ImageView
                     android:id="@+id/player_view"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
+                    android:src="@drawable/img_mindmap"
                     app:show_buffering="when_playing"
                     app:use_controller="false"
                     />
@@ -91,12 +91,12 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/circle_green800_background"
                     android:layout_marginEnd="10dp">
-                        <ImageView style="@style/LessonArrowStyle"/>
+                    <ImageView style="@style/LessonArrowStyle"/>
                 </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bài 1: Dao động điều hòa"
+                    android:text="Hệ thống lý thuyết C2"
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
@@ -107,12 +107,12 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/circle_green800_background"
                     android:layout_marginEnd="10dp">
-                        <ImageView style="@style/LessonArrowStyle"/>
+                    <ImageView style="@style/LessonArrowStyle"/>
                 </LinearLayout>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bài 2: Mô tả dao động điều hòa"
+                    android:text="Hệ thống lý thuyết C3"
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
@@ -128,7 +128,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bài 3: Vận tốc, gia tốc"
+                    android:text="Hệ thống lý thuyết C4"
                     style="@style/LessonTextStyle" />
             </LinearLayout>
 
@@ -144,23 +144,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Bài 4: Động năng, thế năng và cơ năng"
-                    style="@style/LessonTextStyle" />
-            </LinearLayout>
-
-            <LinearLayout android:id="@+id/lesson_item_5"
-                style="@style/LessonItemStyle">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/circle_green800_background"
-                    android:layout_marginEnd="10dp">
-                    <ImageView style="@style/LessonArrowStyle"/>
-                </LinearLayout>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Bài 5: Ôn tập"
+                    android:text="Hệ thống lý thuyết C5"
                     style="@style/LessonTextStyle" />
             </LinearLayout>
         </LinearLayout>
