--- a/app/src/main/res/layout/activity_gamification.xml
+++ b/app/src/main/res/layout/activity_gamification.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gamification_background">
+    android:background="@drawable/img_gamification_background"
+    android:orientation="vertical">
 
     <include layout="@layout/layout_header" />
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#CBFFE7"
-        android:layout_marginBottom="30dp"/>
+        android:background="#CBFFE7"/>
 
     <LinearLayout
         android:id="@+id/top_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center_vertical"
-        android:padding="16dp"
-        android:layout_marginBottom="30dp">
+        android:padding="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,154 +39,142 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="@color/green_700"
-                android:layout_marginRight="50dp"/>
+                android:layout_marginRight="40dp"/>
 
-            <View
+
+            <ProgressBar
                 android:id="@+id/progressRainbow"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="100dp"
                 android:layout_height="8dp"
-                android:layout_marginEnd="16dp" />
+                android:progress="100"
+                android:max="100"
+                android:progressDrawable="@drawable/progress_bar_rainbow"
+                android:layout_marginEnd="16dp"/>
 
-<!--            <ImageView-->
-<!--                android:id="@+id/btn_pause_gamification"-->
-<!--                android:layout_width="32dp"-->
-<!--                android:layout_height="32dp"-->
-<!--                android:src="@drawable/ic_pause_circle"-->
-<!--                android:tint="@color/red_600" />-->
+            <ImageView
+                android:id="@+id/btn_pause_gamification"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/ic_pause_circle"
+                android:layout_marginStart="16dp"/>
         </LinearLayout>
 
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#CBFFE7"/>
+
     <!-- Question Board -->
-<!--    <RelativeLayout-->
-<!--        android:id="@+id/question_board_container"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_below="@id/top_bar"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginTop="32dp">-->
+    <LinearLayout
+        android:id="@+id/question_board_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/top_bar"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
-<!--        <ImageView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:src="@drawable/ic_rope_left"-->
-<!--            android:layout_alignParentStart="true"-->
-<!--            android:layout_marginTop="-16dp"-->
-<!--            android:layout_marginStart="16dp" />-->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-<!--        <ImageView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:src="@drawable/ic_rope_right"-->
-<!--            android:layout_alignParentEnd="true"-->
-<!--            android:layout_marginTop="-16dp"-->
-<!--            android:layout_marginEnd="16dp" />-->
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleX="1.1"
+                android:scaleY="1"
+                android:src="@drawable/img_question_background"
+                android:layout_gravity="center_horizontal" />
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="250dp"-->
-<!--            android:layout_height="150dp"-->
-<!--            android:background="@drawable/question_board_background"-->
-<!--            android:gravity="center"-->
-<!--            android:padding="16dp"-->
-<!--            android:layout_marginTop="16dp">-->
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="100dp"
+                android:text="Một vật có khối lượng 20kg thì có trọng lượng bằng giá tị nào sau đây?"
+                android:textSize="18dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"/>
+        </FrameLayout>
 
-<!--            <TextView-->
-<!--                android:id="@+id/question_text"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Một vật có khối lượng 20kg thì có trọng lượng bằng giá trị nào sau đây?"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textColor="@color/brown_700"-->
-<!--                android:textAlignment="center" />-->
+    </LinearLayout>
 
-<!--        </LinearLayout>-->
+    <!-- Answer Options -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@id/question_board_container"
+        android:layout_marginTop="50dp"
+        android:paddingHorizontal="32dp">
 
-<!--    </RelativeLayout>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="16dp">
 
-<!--    &lt;!&ndash; Answer Options &ndash;&gt;-->
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        android:layout_below="@id/question_board_container"-->
-<!--        android:layout_marginTop="32dp"-->
-<!--        android:paddingHorizontal="32dp">-->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_answer_a"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="A. P=2N"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:background="@drawable/button_white_background"
+                android:layout_marginEnd="8dp" />
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:gravity="center"-->
-<!--            android:layout_marginBottom="16dp">-->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_answer_b"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="B. P=200N"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:background="@drawable/button_white_background"
+                android:layout_marginEnd="8dp" />
+        </LinearLayout>
 
-<!--            <Button-->
-<!--                android:id="@+id/btn_answer_a"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="56dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="A. P=2N"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textColor="@color/green_700"-->
-<!--                android:background="@drawable/answer_button_background"-->
-<!--                android:layout_marginEnd="8dp" />-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="16dp">
 
-<!--            <Button-->
-<!--                android:id="@+id/btn_answer_b"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="56dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="B. P=200N"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textColor="@color/green_700"-->
-<!--                android:background="@drawable/answer_button_background"-->
-<!--                android:layout_marginStart="8dp" />-->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_answer_c"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="C. P=2000N"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:background="@drawable/button_white_background"
+                android:layout_marginEnd="8dp" />
 
-<!--        </LinearLayout>-->
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_answer_d"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="D. P=20N"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:background="@drawable/button_white_background"
+                android:layout_marginEnd="8dp" />
+        </LinearLayout>
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal"-->
-<!--            android:gravity="center">-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_answer_c"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="56dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="C. P=2000N"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textColor="@color/green_700"-->
-<!--                android:background="@drawable/answer_button_background"-->
-<!--                android:layout_marginEnd="8dp" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/btn_answer_d"-->
-<!--                android:layout_width="0dp"-->
-<!--                android:layout_height="56dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="D. P=20N"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textStyle="bold"-->
-<!--                android:textColor="@color/green_700"-->
-<!--                android:background="@drawable/answer_button_background"-->
-<!--                android:layout_marginStart="8dp" />-->
-
-<!--        </LinearLayout>-->
-
-<!--    </LinearLayout>-->
-
-<!--    &lt;!&ndash; Character and Scenery (positioned at bottom) &ndash;&gt;-->
-<!--    <ImageView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:src="@drawable/gamification_scenery"-->
-<!--        android:scaleType="fitXY"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:adjustViewBounds="true" />-->
-
-</RelativeLayout>
+    </LinearLayout>
+</LinearLayout>
