Task6: BuyCourseFragment (Completed)

--- a/app/src/main/res/layout/layout_header.xml
+++ b/app/src/main/res/layout/layout_header.xml
@@ -46,7 +46,8 @@
 
     </LinearLayout>
 
-    <TextView
+    <ImageView
+        android:id="@+id/user"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/ic_user_circle"
