--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,229 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/gradient_green_background"
-    android:padding="15dp"
-    android:gravity="center">
+    android:background="@drawable/gradient_green_background">
 
-    <!-- Header Section -->
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:gravity="center"
-        android:layout_marginBottom="32dp">
+        android:background="@drawable/gradient_green_background"
+        android:padding="15dp"
+        android:gravity="center">
 
-        <!-- Logo and Title -->
+        <!-- Header Section -->
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:gravity="center"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="32dp">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/img_atom"
-                android:layout_marginEnd="8dp" />
+            <!-- Logo and Title -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginBottom="8dp">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/img_atom"
+                    android:layout_marginEnd="8dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="PHYSX"
+                    android:textSize="38sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/green_700" />
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/img_atom"
+                    android:layout_marginEnd="8dp" />
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PHYSX"
-                android:textSize="38sp"
-                android:textStyle="bold"
-                android:textColor="@color/green_700" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/img_atom"
-                android:layout_marginEnd="8dp" />
+                android:text="Chào mừng đến với thế giới tri thức"
+                android:textSize="20sp"
+                android:textColor="@color/green_600" />
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chào mừng đến với thế giới tri thức"
-            android:textSize="20sp"
-            android:textColor="@color/green_600" />
-
-    </LinearLayout>
-
-    <!-- Main Title -->
-    <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="150dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_marginBottom="32dp">
-
-        <ImageView
-            android:id="@+id/img_text_welcome"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/img_text_welcome"
-            android:layout_centerInParent="true" />
-
-    </LinearLayout>
-
-    <!-- Character Illustration -->
-    <RelativeLayout
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_marginBottom="60dp">
-
-        <ImageView
-            android:id="@+id/character_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/img_professor"
-            android:layout_centerInParent="true" />
-
-
-    </RelativeLayout>
-
-    <!-- Action Buttons -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="40dp"
-        android:weightSum="2">
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_login"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:paddingHorizontal="30dp"
-                android:text="Đăng nhập"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:background="@drawable/button_white_background" />
-
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginStart="-75dp"
-                android:layout_gravity="center"
-                android:scaleType="centerInside"
-                android:elevation="10dp"
-                android:src="@drawable/ic_arrow_right"
-                android:background="@drawable/circle_black_background"/>
-        </FrameLayout>
-
-
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_register"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:paddingHorizontal="30dp"
-                android:text="Đăng ký"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:background="@drawable/button_white_background" />
-
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginStart="-65dp"
-                android:layout_gravity="center"
-                android:scaleType="centerInside"
-                android:elevation="10dp"
-                android:src="@drawable/ic_arrow_right"
-                android:background="@drawable/circle_black_background"/>
-        </FrameLayout>
-
-    </LinearLayout>
-
-    <!-- Language Selection -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="right"
-        android:layout_marginRight="20dp">
-
+        <!-- Main Title -->
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="150dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_marginBottom="32dp">
+
+            <ImageView
+                android:id="@+id/img_text_welcome"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/img_text_welcome"
+                android:layout_centerInParent="true" />
+
+        </LinearLayout>
+
+        <!-- Character Illustration -->
+        <RelativeLayout
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_marginBottom="60dp">
+
+            <ImageView
+                android:id="@+id/character_background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/img_professor"
+                android:layout_centerInParent="true" />
+
+
+        </RelativeLayout>
+
+        <!-- Action Buttons -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:layout_marginBottom="40dp"
+            android:weightSum="2">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_vietnam_flag"
-                android:textSize="18sp"
-                android:layout_marginEnd="4dp" />
-
-            <TextView
+            <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="VN"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:clipChildren="false"
+                android:clipToPadding="false">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:minWidth="150dp"
+                    android:maxWidth="180dp"
+                    android:layout_gravity="center"
+                    android:text="Đăng nhập"
+                    android:textSize="13sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/button_white_background" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_gravity="start"
+                    android:scaleType="centerInside"
+                    android:elevation="10dp"
+                    android:src="@drawable/ic_arrow_right"
+                    android:background="@drawable/circle_black_background"/>
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:clipChildren="false"
+                android:clipToPadding="false">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/btn_register"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:minWidth="150dp"
+                    android:maxWidth="180dp"
+                    android:layout_gravity="center"
+                    android:text="Đăng ký"
+                    android:textSize="13sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:background="@drawable/button_white_background" />
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_gravity="start"
+                    android:scaleType="centerInside"
+                    android:elevation="10dp"
+                    android:src="@drawable/ic_arrow_right"
+                    android:background="@drawable/circle_black_background"/>
+            </FrameLayout>
 
         </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" | "
-            android:textSize="18sp"
-            android:textColor="@color/gray_400"
-            android:layout_marginHorizontal="8dp" />
-
+        <!-- Language Selection -->
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="right"
+            android:layout_marginRight="20dp">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_uk_flag"
-                android:textSize="18sp"
-                android:layout_marginEnd="4dp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_vietnam_flag"
+                    android:textSize="18sp"
+                    android:layout_marginEnd="4dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="VN"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="EN"
+                android:text=" | "
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textColor="@color/gray_400"
+                android:layout_marginHorizontal="8dp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/ic_uk_flag"
+                    android:textSize="18sp"
+                    android:layout_marginEnd="4dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="EN"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</ScrollView>
