--- a/app/src/main/res/layout/fragment_buy_courses.xml
+++ b/app/src/main/res/layout/fragment_buy_courses.xml
@@ -1,198 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/gradient_green_background">
 
-    <!-- Username Title -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/btn_back"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:gravity="center"
-            android:src="@drawable/ic_back"
-            android:layout_marginEnd="8dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
+        <!-- Username Title -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TÊN NGƯỜI DÙNG"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/green_700" />
-
-    </LinearLayout>
-
-    <!-- User Avatar Section -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:padding="15dp">
-
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/ic_user_circle"
-            />
-
-    </LinearLayout>
-
-    <!-- Course Packages -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="24dp"
-        android:paddingBottom="32dp">
-
-        <FrameLayout
-            android:id="@+id/package_semester"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
             android:orientation="horizontal"
-            android:background="@drawable/button_learningpath_background"
-            android:padding="20dp"
-            android:layout_marginBottom="20dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="GÓI HỌC KỲ"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/green_700"
-                    android:layout_marginBottom="4dp"
-                    android:layout_gravity="center_horizontal"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="499.000 VND"
-                    android:textSize="30sp"
-                    android:textColor="@color/green_700"
-                    android:layout_gravity="center_horizontal"/>
-
-            </LinearLayout>
+            android:gravity="center_vertical"
+            android:padding="16dp">
 
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/img_lock"
-                android:layout_marginStart="260dp"
-                android:layout_marginTop="15dp"/>
+                android:id="@+id/btn_back"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:gravity="center"
+                android:src="@drawable/ic_back"
+                android:layout_marginEnd="8dp" />
 
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/package_year"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:orientation="horizontal"
-            android:background="@drawable/button_learningpath_background"
-            android:padding="20dp"
-            android:layout_marginBottom="20dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-
-            <LinearLayout
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal">
+                android:text="TÊN NGƯỜI DÙNG"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:textColor="@color/green_700" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="GÓI NĂM HỌC"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/green_700"
-                    android:layout_marginBottom="4dp"
-                    android:layout_gravity="center_horizontal"/>
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="899.000 VND"
-                    android:textSize="30sp"
-                    android:textColor="@color/green_700"
-                    android:layout_gravity="center_horizontal"/>
-
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/img_lock"
-                android:layout_marginStart="260dp"
-                android:layout_marginTop="15dp"/>
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/package_topic"
+        <!-- User Avatar Section -->
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:orientation="horizontal"
-            android:background="@drawable/button_learningpath_background"
-            android:padding="20dp"
-            android:layout_marginBottom="20dp"
-            android:clipChildren="false"
-            android:clipToPadding="false">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="GÓI CHUYÊN ĐỀ"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/green_700"
-                    android:layout_marginBottom="4dp"
-                    android:layout_gravity="center_horizontal"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="199.000 VND"
-                    android:textSize="30sp"
-                    android:textColor="@color/green_700"
-                    android:layout_gravity="center_horizontal"/>
-
-            </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:padding="15dp">
 
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/img_lock"
-                android:layout_marginStart="260dp"
-                android:layout_marginTop="15dp"/>
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/ic_user_circle"
+                />
 
-        </FrameLayout>
+        </LinearLayout>
 
+        <!-- Course Packages -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="24dp"
+            android:paddingBottom="32dp">
+
+            <FrameLayout
+                android:id="@+id/package_semester"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/button_learningpath_background"
+                android:padding="20dp"
+                android:layout_marginBottom="20dp"
+                android:clipChildren="false"
+                android:clipToPadding="false">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="GÓI HỌC KỲ"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/green_700"
+                        android:layout_marginBottom="4dp"
+                        android:layout_gravity="center_horizontal"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="499.000 VND"
+                        android:textSize="25sp"
+                        android:textColor="@color/green_700"
+                        android:layout_gravity="center_horizontal"/>
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/img_lock"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="-10dp"/>
+
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/package_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/button_learningpath_background"
+                android:padding="20dp"
+                android:layout_marginBottom="20dp"
+                android:clipChildren="false"
+                android:clipToPadding="false">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="GÓI NĂM HỌC"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/green_700"
+                        android:layout_marginBottom="4dp"
+                        android:layout_gravity="center_horizontal"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="899.000 VND"
+                        android:textSize="25sp"
+                        android:textColor="@color/green_700"
+                        android:layout_gravity="center_horizontal"/>
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/img_lock"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="-10dp"/>
+
+            </FrameLayout>
+
+            <FrameLayout
+                android:id="@+id/package_topic"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:background="@drawable/button_learningpath_background"
+                android:padding="20dp"
+                android:layout_marginBottom="20dp"
+                android:clipChildren="false"
+                android:clipToPadding="false">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="GÓI CHUYÊN ĐỀ"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/green_700"
+                        android:layout_marginBottom="4dp"
+                        android:layout_gravity="center_horizontal"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="199.000 VND"
+                        android:textSize="25sp"
+                        android:textColor="@color/green_700"
+                        android:layout_gravity="center_horizontal"/>
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/img_lock"
+                    android:layout_gravity="end|bottom"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="-10dp"/>
+
+            </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
+</ScrollView>
 
-</LinearLayout>
