--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/gradient_green_background">
 
@@ -26,14 +28,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TRỢ LÝ ẢO"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:textColor="@color/green_700" />
 
     </LinearLayout>
 
     <!-- Chat Content Area -->
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -42,35 +44,40 @@
         <!-- Chatbot Avatar and Welcome Message -->
         <LinearLayout
             android:id="@+id/welcome_section"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerHorizontal="true"
             android:gravity="center"
-            android:layout_centerHorizontal="true">
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.7">
 
             <!-- Speech Bubble -->
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:background="@drawable/speech_bubble_bot_rounded"
-                android:padding="12dp"
-                android:layout_marginTop="100dp"
-                android:layout_marginBottom="8dp">
+                android:padding="12dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textAlignment="center"
                     android:text="Xin chào, tôi có thể giúp gì cho bạn?"
-                    android:textSize="18sp"
-                    android:textColor="@color/green_700" />
+                    android:textColor="@color/green_700"
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
             <!-- Chatbot Avatar -->
             <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/img_chatbot"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/img_chatbot" />
 
         </LinearLayout>
 
@@ -79,56 +86,62 @@
             android:id="@+id/suggested_section"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:orientation="vertical"
-            android:layout_alignParentBottom="true">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:layout_editor_absoluteX="16dp">
 
             <TextView
                 android:id="@+id/suggestion_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dao động điều hòa là gì?"
-                android:textSize="14sp"
-                android:textColor="@color/gray_400"
-                android:padding="8dp"
                 android:layout_marginBottom="8dp"
                 android:clickable="true"
-                android:focusable="true" />
+                android:focusable="true"
+                android:padding="8dp"
+                android:text="Dao động điều hòa là gì?"
+                android:textColor="@color/gray_400"
+                android:textSize="12dp" />
 
             <TextView
                 android:id="@+id/suggestion_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Công thức tính lực?"
-                android:textSize="14sp"
-                android:textColor="@color/gray_400"
-                android:padding="8dp"
                 android:layout_marginBottom="8dp"
                 android:clickable="true"
-                android:focusable="true" />
+                android:focusable="true"
+                android:padding="8dp"
+                android:text="Công thức tính lực?"
+                android:textColor="@color/gray_400"
+                android:textSize="12dp" />
 
             <TextView
                 android:id="@+id/suggestion_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Định luật bảo toàn năng lượng?"
-                android:textSize="14sp"
-                android:textColor="@color/gray_400"
-                android:padding="8dp"
                 android:clickable="true"
-                android:focusable="true" />
+                android:focusable="true"
+                android:padding="8dp"
+                android:text="Định luật bảo toàn năng lượng?"
+                android:textColor="@color/gray_400"
+                android:textSize="12dp" />
 
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_chat"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:visibility="gone"
-            android:layout_above="@id/suggested_section"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="16dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/welcome_section"
+            app:layout_constraintBottom_toTopOf="@id/suggested_section"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp"/>
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <!-- Input Section -->
     <LinearLayout
@@ -148,8 +161,7 @@
             android:hint="Nhập câu hỏi vào đây..."
             android:textColorHint="@color/black"
             android:textSize="16sp"
-            android:background="@android:color/transparent"
-            android:padding="8dp" />
+            android:background="@android:color/transparent"/>
 
         <ImageView
             android:id="@+id/btn_send_message"
@@ -158,7 +170,6 @@
             android:scaleX="1.5"
             android:scaleY="1.5"
             android:src="@drawable/ic_send_message"
-            android:padding="8dp"
             android:clickable="true"
             android:focusable="true" />
 
