--- a/app/src/main/res/layout/fragment_learning_path.xml
+++ b/app/src/main/res/layout/fragment_learning_path.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="LỘ TRÌNH HỌC CÁ NHÂN HÓA"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 android:textColor="@color/green_700" />
 
@@ -126,7 +126,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Lộ trình học Vật lý 11 (Từ 6-8+)"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:textColor="@color/green_700"
                     android:layout_marginBottom="12dp"
@@ -152,20 +152,20 @@
                             android:layout_height="wrap_content"
                             android:text="Đầu vào: 6-6.5"
                             android:layout_gravity="top|start"
-                            android:textSize="18sp"
+                            android:textSize="14sp"
                             android:textStyle="bold"
                             android:textColor="@color/green_700"
-                            android:layout_marginEnd="24dp" />
+                            android:layout_marginStart="24dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Đầu ra: 8+"
                             android:layout_gravity="bottom|start"
-                            android:textSize="18sp"
+                            android:textSize="14sp"
                             android:textStyle="bold"
                             android:textColor="@color/green_700"
-                            android:layout_marginEnd="24dp" />
+                            android:layout_marginStart="24dp" />
 
                     </FrameLayout>
 
@@ -178,43 +178,55 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="top|start"
+                            android:layout_gravity="top|end"
                             android:orientation="horizontal"
-                            android:layout_marginLeft="30dp">
+                            android:layout_marginEnd="24dp"
+                            android:gravity="center_vertical">
 
                             <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
                                 android:src="@drawable/img_book"
+                                android:scaleX="1.3"
+                                android:scaleY="1.3"
+                                android:layout_marginRight="5dp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="12 bài học"
+                                android:textSize="14sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/green_700"
+                                android:drawablePadding="4dp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom|end"
+                            android:orientation="horizontal"
+                            android:layout_marginEnd="24dp"
+                            android:gravity="center_vertical">
+
+                            <ImageView
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:src="@drawable/ic_clock"
                                 android:scaleX="1.1"
                                 android:scaleY="1.1"
                                 android:layout_marginRight="5dp"/>
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="12 bài học"
-                                android:textSize="18sp"
+                                android:text="1.5 tháng"
+                                android:textSize="14sp"
                                 android:textStyle="bold"
                                 android:textColor="@color/green_700"
                                 android:drawablePadding="4dp" />
                         </LinearLayout>
 
-                        <TextView
-                            android:layout_marginLeft="35dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="1,5 tháng"
-                            android:layout_gravity="bottom|start"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/green_700"
-                            android:drawableStart="@drawable/ic_clock"
-                            android:drawablePadding="7dp" />
-
                     </FrameLayout>
-
                 </LinearLayout>
-
             </LinearLayout>
 
             <!-- Second Course Card -->
@@ -230,7 +242,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Lộ trình học Vật lý 11 (Từ 6-8+)"
-                    android:textSize="20sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     android:textColor="@color/green_700"
                     android:layout_marginBottom="12dp"
@@ -256,20 +268,20 @@
                             android:layout_height="wrap_content"
                             android:text="Đầu vào: 8"
                             android:layout_gravity="top|start"
-                            android:textSize="18sp"
+                            android:textSize="14sp"
                             android:textStyle="bold"
                             android:textColor="@color/green_700"
-                            android:layout_marginEnd="24dp" />
+                            android:layout_marginStart="24dp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Đầu ra: 9+"
                             android:layout_gravity="bottom|start"
-                            android:textSize="18sp"
+                            android:textSize="14sp"
                             android:textStyle="bold"
                             android:textColor="@color/green_700"
-                            android:layout_marginEnd="24dp" />
+                            android:layout_marginStart="24dp" />
 
                     </FrameLayout>
 
@@ -282,47 +294,56 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="top|start"
+                            android:layout_gravity="top|end"
                             android:orientation="horizontal"
-                            android:layout_marginLeft="30dp">
+                            android:layout_marginEnd="24dp"
+                            android:gravity="center_vertical">
 
                             <ImageView
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
                                 android:src="@drawable/img_book"
+                                android:scaleX="1.3"
+                                android:scaleY="1.3"
+                                android:layout_marginRight="5dp"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="16 bài học"
+                                android:textSize="14sp"
+                                android:textStyle="bold"
+                                android:textColor="@color/green_700"
+                                android:drawablePadding="4dp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom|end"
+                            android:orientation="horizontal"
+                            android:layout_marginEnd="24dp"
+                            android:gravity="center_vertical">
+
+                            <ImageView
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:src="@drawable/ic_clock"
                                 android:scaleX="1.1"
                                 android:scaleY="1.1"
                                 android:layout_marginRight="5dp"/>
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="16 bài học"
-                                android:textSize="18sp"
+                                android:text="2 tháng"
+                                android:textSize="14sp"
                                 android:textStyle="bold"
                                 android:textColor="@color/green_700"
                                 android:drawablePadding="4dp" />
                         </LinearLayout>
 
-                        <TextView
-                            android:layout_marginLeft="35dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="2 tháng"
-                            android:layout_gravity="bottom|start"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:textColor="@color/green_700"
-                            android:drawableStart="@drawable/ic_clock"
-                            android:drawablePadding="7dp" />
-
                     </FrameLayout>
-
                 </LinearLayout>
-
             </LinearLayout>
-
         </LinearLayout>
-
     </LinearLayout>
-
 </ScrollView>
