--- a/app/src/main/res/layout/fragment_mind_map.xml
+++ b/app/src/main/res/layout/fragment_mind_map.xml
@@ -3,9 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/tools"
-    android:background="@drawable/gradient_green_background"
-    app:ignore="NamespaceTypo">
+    android:background="@drawable/gradient_green_background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="MINDMAP HỆ THỐNG KIẾN THỨC"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 android:textColor="@color/green_700" />
         </LinearLayout>
@@ -47,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Hệ thống lý thuyết C1"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:textAlignment="center"
@@ -71,8 +69,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:src="@drawable/img_mindmap"
-                    app:show_buffering="when_playing"
-                    app:use_controller="false"
                     />
             </FrameLayout>
         </androidx.cardview.widget.CardView>
