--- a/app/src/main/res/layout/fragment_physics_subject.xml
+++ b/app/src/main/res/layout/fragment_physics_subject.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="VẬT LÝ 12"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 android:textColor="@color/green_700" />
         </LinearLayout>
@@ -96,7 +96,7 @@
                 android:layout_height="64dp"
                 android:layout_margin="20dp"
                 android:text="Công thức"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:background="@drawable/button_phys_subj_background" />
@@ -109,7 +109,6 @@
                 android:scaleY="1.2"
                 android:src="@drawable/img_atom_color_2"
                 android:layout_gravity="start"
-                android:layout_marginTop="10dp"
                 android:layout_marginStart="20dp"
                 android:elevation="10dp"/>
         </FrameLayout>
@@ -129,7 +128,7 @@
                 android:layout_height="64dp"
                 android:layout_margin="20dp"
                 android:text="MindMap"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:background="@drawable/button_phys_subj_background" />
@@ -141,9 +140,9 @@
                 android:scaleX="1.2"
                 android:scaleY="1.2"
                 android:src="@drawable/img_bulb"
-                android:layout_gravity="start"
+                android:layout_gravity="end"
                 android:layout_marginTop="15dp"
-                android:layout_marginStart="270dp"
+                android:layout_marginEnd="20dp"
                 android:elevation="10dp"/>
         </FrameLayout>
 
